--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-big-calendar": "^1.6.9",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.11.0",
+    "react-datetime-picker": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
